# yung-accountant

./: .gitignore  DESIGN.md  README.md  docker-compose.yml  mer.mermaid  vista_desarrollo.mermaid  vista_fisica.mermaid  vista_logica.mermaid
backend/auth/: app.py  requirements.txt
backend/keycloak/: Dockerfile
backendcpp/: .env  Proyecto arqui.postman_collection.json  docker-compose.yml
backendcpp/auth/: CMakeLists.txt  Dockerfile.alpine
backendcpp/auth/include/: database.hpp  keycloak_auth.hpp  types.hpp  user_service.hpp
backendcpp/auth/src/: database.cpp  keycloak_auth.cpp  main.cpp  user_service.cpp
backendcpp/category/: CMakeLists.txt  Dockerfile.alpine
backendcpp/category/include/: category_service.hpp
backendcpp/category/src/: category_service.cpp  database.cpp  main.cpp
backendcpp/common/: CMakeLists.txt
backendcpp/common/include/: database.hpp  kafka_producer.hpp  keycloak_auth.hpp  logger.hpp  rate_limiter.hpp  redis_client.hpp  security.hpp  turnstile.hpp  validators.hpp
backendcpp/common/src/: database.cpp  kafka_producer.cpp  keycloak_auth.cpp  redis_client.cpp
backendcpp/community/: CMakeLists.txt  Dockerfile.alpine
backendcpp/community/include/: community_service.hpp  database.hpp  redis_client.hpp
backendcpp/community/src/: community_service.cpp  main.cpp  redis_client.cpp
backendcpp/debt/: CMakeLists.txt  Dockerfile.alpine
backendcpp/debt/include/: debt_service.hpp
backendcpp/debt/src/: debt_service.cpp  keycloak_auth.cpp  main.cpp
backendcpp/event-consumer/: CMakeLists.txt  Dockerfile.alpine
backendcpp/event-consumer/include/: kafka_producer.hpp
backendcpp/event-consumer/src/: kafka_producer.cpp  main.cpp
backendcpp/goal/: CMakeLists.txt  Dockerfile.alpine
backendcpp/goal/include/: goal_service.hpp
backendcpp/goal/src/: goal_service.cpp  main.cpp
backendcpp/goals/: CMakeLists.txt  Dockerfile.alpine
backendcpp/goals/include/: goal_service.hpp
backendcpp/goals/src/: database.cpp  goal_service.cpp  keycloak_auth.cpp  main.cpp
backendcpp/habit/: CMakeLists.txt  Dockerfile.alpine
backendcpp/habit/include/: database.hpp  habit_service.hpp  redis_client.hpp
backendcpp/habit/src/: habit_service.cpp  keycloak_auth.cpp  main.cpp  redis_client.cpp
backendcpp/keycloak/: init-keycloak.sh
backendcpp/purchases/: CMakeLists.txt  Dockerfile.alpine
backendcpp/purchases/include/: purchase_service.hpp
backendcpp/purchases/src/: main.cpp  purchase_service.cpp
backendcpp/savings/: CMakeLists.txt  Dockerfile.alpine
backendcpp/savings/include/: auth_middleware.hpp  saving_service.hpp
backendcpp/savings/src/: main.cpp  saving_service.cpp
backendcpp/simulation/: CMakeLists.txt  Dockerfile.alpine
backendcpp/simulation/include/: simulation_service.hpp
backendcpp/simulation/src/: kafka_producer.cpp  main.cpp  simulation_service.cpp
backendcpp/storage/: CMakeLists.txt  Dockerfile.alpine
backendcpp/storage/include/: auth_middleware.hpp  database.hpp  keycloak_auth.hpp  storage_service.hpp
backendcpp/storage/src/: main.cpp  storage_service.cpp
backendcpp/transaction/: CMakeLists.txt  Dockerfile.alpine
backendcpp/transaction/include/: transaction_service.hpp
backendcpp/transaction/src/: main.cpp  transaction_service.cpp
backendcpp/wallet/: CMakeLists.txt  Dockerfile.alpine
backendcpp/wallet/include/: wallet_service.hpp
backendcpp/wallet/src/: main.cpp  wallet_service.cpp
database/: docker-compose.yml
database/init-scripts/: 00-keycloak-db.sql  01-init.sql
embedding-onnx/: CMakeLists.txt  Dockerfile  docker-compose.yml
embedding-onnx/config/: tokenizer.json
embedding-onnx/scripts/: download_model.sh
embedding-onnx/src/: embedding_service.cpp  embedding_service.hpp  http_server.hpp  main.cpp  tokenizer.cpp  tokenizer.hpp
escenarios/: debtpay.mermaid  feed.mermaid  login.mermaid  post.mermaid  searchUser.mermaid
infra/: README.md
infra/nginx/: cloudflare-realip.conf  keycloak.yung-accountant.com.conf  security-headers-keycloak.conf  security-headers.conf  yung-accountant.com.conf
kafka/: docker-compose.yml
keycloak/: .env  docker-compose.yml
keycloak/keycloak/: Dockerfile  initialize.sh
mongo-keycloak/: .env  docker-compose.yml
mongo-keycloak/keycloak/: Dockerfile  init.sh
pythonapp/: .env
pythonapp/backend/auth/: .env  User.py  config.py  keycloak_client.py
pythonapp/backend/goals/: Goal.py  app.py
pythonapp/backend/keycloak/: init-keycloak.sh
pythonapp/backend/purchases/: Purchase.py  app.py
pythonapp/backend/savings/: Saving.py  app.py
pythonapp/backend/storage/: app.py  models.py  requirements.txt
pythonapp/frontend/: Dockerfile  index.html
pythonapp/frontend-angular/: Dockerfile  package-lock.json
pythonapp/frontend-angular/src/: index.html  main.ts  styles.css
pythonapp/frontend/css/: styles.css
pythonapp/frontend/js/: api.js  auth.js  goals.js  purchases.js  savings.js  storage.js
pythonapp/frontend/pages/: dashboard.html  goals.html  login.html  purchases.html  register.html  savings.html  storage.html
vista_procesos/: debtpay.mermaid  kafka.mermaid  login.mermaid  post.mermaid  register.mermaid  token.mermaid
yung-accountant/: .gitignore  bash.exe.stackdump  index.html  package-lock.json  package.json  vite.config.ts
yung-accountant/public/: manifest.json  offline.html  robots.txt  sitemap.xml
yung-accountant/src/: App.tsx  index.css  main.tsx  sw.js
yung-accountant/src/contexts/: ThemeContext.tsx
yung-accountant/src/hooks/: useAuth.ts  useBackgroundSync.ts  useCachedData.ts  useCountUp.ts  useDocumentTitle.ts  useFocusTrap.ts  useMediaQuery.ts  useMetaInit.ts  useOfflineAware.ts  useOnlineStatus.ts  useResponsive.ts  useTheme.ts  useToast.ts
yung-accountant/src/i18n/: LanguageContext.tsx  translations.ts
yung-accountant/src/pages/: CalendarTransactions.tsx  Categories.tsx  Community.tsx  Dashboard.tsx  Debts.tsx  Goals.tsx  Habits.tsx  SimulationCalendar.tsx  Simulations.tsx  Transactions.tsx  Wallets.tsx
yung-accountant/src/services/: auth.service.ts  category.service.ts  community.service.ts  debt.service.ts  goal.service.ts  (+9 more)
(+227 files in other folders)
